--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div class="controls">
       <button id="newGame">Nueva Partida</button>
-      <button id="newPuzzle">Nuevo Sudoku</button>
+      <button id="newPuzzle">Generar Sudoku</button>
       <select id="difficulty">
         <option value="easy">Fácil</option>
         <option value="medium">Medio</option>
